# toolthread

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/eval/: bfcl_multi_turn.yaml
configs/model/: qwen3-1.7b.yaml  smollm3-3b.yaml
configs/train/: lora_sft.yaml
docs/: strategy.md
notebooks/: kaggle_eval.ipynb  lightning_eval.ipynb
runs/: Qwen_Qwen3-1.7B-FC.baseline.json  baseline_multi_turn.csv  baseline_overall.csv
scripts/: prep_sft_data.py  run_bfcl_eval.py  run_lora_sft.py  run_on_lightning.py
src/: config.py
src/eval/: __init__.py  bfcl_runner.py  scores.py  wandb_logger.py
